[package]
name = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.8"
candle-nn = "0.8" 
candle-transformers = "0.8"
hf-hub = { version = "0.4.3", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
tokenizers = "0.19"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.1", features = ["v4"] }
