[package]
name = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/jfernandez/candle.git", branch = "cudarc-0.17.3", features = ["cuda"] }
candle-nn = { git = "https://github.com/jfernandez/candle.git", branch = "cudarc-0.17.3" }
candle-transformers = { git = "https://github.com/jfernandez/candle.git", branch = "cudarc-0.17.3" }
hf-hub = { version = "0.4.3", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
tokenizers = "0.19"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.1", features = ["v4"] }
